Item Cards completed, with product details and grid placement

--- a/index.html
+++ b/index.html
@@ -15,6 +15,69 @@
             <div class="cartAmount">0</div>
         </div>
     </div>
+
+    <div class="shop" id="shop">
+        <div class="item">
+            <img width="220" height="320px" src="images/img-1.jpg" alt="">
+            <div class="details">
+                <h3>Casual Shirt</h3>
+                <p>100% Cotton. Great for Summer</p>
+                <div class="price-quantity">
+                    <h3>$45</h3>
+                    <div class="buttons">
+                        <i class = "bi bi-dash-lg"></i>
+                        <div class="quantity">0</div>
+                        <i class = "bi bi-plus-lg"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <img width="220" height="320px" src="images/img-2.jpg" alt="">
+            <div class="details">
+                <h3>Formal Shirt</h3>
+                <p>Best Suited for the Office</p>
+                <div class="price-quantity">
+                    <h3>$55</h3>
+                    <div class="buttons">
+                        <i class = "bi bi-dash-lg"></i>
+                        <div class="quantity">0</div>
+                        <i class = "bi bi-plus-lg"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <img width="220" height="320px" src="images/img-3.jpg" alt="">
+            <div class="details">
+                <h3>TShirt</h3>
+                <p>Comfort first for Daily wear</p>
+                <div class="price-quantity">
+                    <h3>$25</h3>
+                    <div class="buttons">
+                        <i class = "bi bi-dash-lg"></i>
+                        <div class="quantity">0</div>
+                        <i class = "bi bi-plus-lg"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <img width="220" height="320px" src="images/img-4.jpg" alt="">
+            <div class="details">
+                <h3>Blazer</h3>
+                <p>For buisness and client meetings</p>
+                <div class="price-quantity">
+                    <h3>$65</h3>
+                    <div class="buttons">
+                        <i class = "bi bi-dash-lg"></i>
+                        <div class="quantity">0</div>
+                        <i class = "bi bi-plus-lg"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="main.js"></script>
 </html>
