--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
-    <div class="navbar">
+     <div class="navbar">
         <a href="index.html">
             <h2>Clothing Store</h2>
         </a>
@@ -19,11 +19,9 @@
         </div>
         </a>  
     </div>
-
-    <div class="shop" id="shop">
-        
-    </div>
+    <div id="label" class=""text-center></div>
+    <div id="shopping-cart" class="shopping-cart"></div>
 </body>
 <script src = "src/data.js"></script>
-<script src="src/main.js" defer></script>
+<script src="src/cart.js" defer></script>
 </html>
